--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-inview": "^4.0.1"
+		"@tsparticles/svelte": "^3.1.1",
+		"nodemailer": "^6.9.14",
+		"svelte-inview": "^4.0.1",
+		"tsparticles": "^3.5.0"
 	}
 }
